--- a/templates/config.j2
+++ b/templates/config.j2
@@ -1,5 +1,5 @@
 {
     "target": {
-        "credentials": {{ prometheus_vcd_sd_credentials | to_nice_json(indent=4) | indent(width=8, first=False) }}
+        "credentials": {{ prometheus_vcd_sd_credentials | to_nice_json(indent=4) | indent(width=8, first=false) }}
     }
 }
